<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRcylv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dividerColor">

        <TextView
            android:id="@+id/weekDayText"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize14sp" />

        <TextView
            android:id="@+id/weekTempText"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temperature"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize14sp" />

        <TextView
            android:id="@+id/weekHumdText"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/humid"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize14sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/weeklyRcylv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>